test/compile_errors/stage1/obj/labeled_break_not_found.zig
export fn entry() void {
    blah: while (true) {
        while (true) {
            break :outer;
        }
    }
}

// error
// backend=stage1
// target=native
//
// tmp.zig:4:20: error: label not found: 'outer'
